# bio-assist

./: .gitignore  README.md  pyproject.toml
knowledge/: co-simulation.txt
knowledge/ai-gen-sbml/: Caravagna2010_modified.xml  ai_gen_caravagna2010.xml  ai_gen_mTOR.xml  ai_gen_repressilator.xml
src/: documents.py  functions.py  indexing.py  main.py  prompts.py  retrieval.py
tests/: test_main.ipynb
