[tool.poetry]
name = "bio-assist"
version = "0.1.0"
description = "Web based biological modeling and simulation."
authors = ["Alex Patrie <alexanderpatrie@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask = "^3.0.0"
functions = "^0.7.0"
openai = "^1.2.3"
packaging = "^23.2"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
jupyter = "^1.0.0"
langchain-community = "^0.2.3"
tiktoken = "^0.7.0"
langchain-openai = "^0.1.8"
langchainhub = "^0.1.17"
chromadb = "^0.5.0"
langchain = "^0.2.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
